tests/jsx_member_expression/jsx_member_expression.exp
Error ------------------------------------------------------------------------------------------------------ jsx.js:5:17

Cannot get `x.b` because property `b` is missing in object literal [1].

   jsx.js:5:17
   5| <A.B a={x.a} b={x.b} />;
                      ^^^

References:
   jsx.js:4:11
   4| const x = {a: 3};
                ^^^^^^ [1]



Found 1 error
